map not working, activities poorly linked together

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".subgeddit"
+            android:label="@string/title_activity_subgeddit" >
+        </activity>
+        <activity
+            android:name=".activity_map"
+            android:label="@string/title_activity_activity_map" >
+        </activity>
     </application>
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
