--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".Activity_Main"
-            android:label="@string/app_name">
+            android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -17,15 +17,19 @@
         </activity>
         <activity
             android:name=".Activity_Threads"
-            android:label="@string/title_activity_subgeddit">
+            android:label="@string/title_activity_threads">
         </activity>
         <activity
             android:name=".Activity_Comments"
-            android:label="@string/title_activity_subgeddit">
+            android:label="@string/title_activity_comments">
         </activity>
         <activity
             android:name=".Activity_Map"
             android:label="@string/title_activity_activity_map">
+        </activity>
+        <activity
+            android:name=".Activity_Add"
+            android:label="@string/title_activity_add">
         </activity>
     </application>
 
